# pytuber

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  demo.yml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: conf.py  credentials.rst  index.rst  reference.rst  usage.rst
docs/reference/: add_editor.rst  add_file.rst  add_lastfm.rst  clean.rst  fetch_lastfm.rst  fetch_youtube.rst  list.rst  overview.rst  push_youtube.rst  quota.rst  remove.rst  setup.rst  show.rst
docs/usage/: lastfm.rst  youtube.rst
pytubefm/: __init__.py  cli.py  data.py  exceptions.py  iso3166.py  main.py  models.py  storage.py
pytubefm/lastfm/: commands.py  models.py  params.py  services.py
pytubefm/youtube/: commands.py  models.py  services.py
pytuber/: __init__.py  cli.py  iso3166.py  models.py  storage.py  utils.py  version.py
pytuber/core/: models.py  params.py  services.py  utils.py
pytuber/core/commands/: __init__.py  cmd_add.py  cmd_autocomplete.py  cmd_clean.py  cmd_fetch.py  cmd_list.py  cmd_push.py  cmd_quota.py  cmd_remove.py  cmd_setup.py  cmd_show.py
pytuber/lastfm/: commands.py  models.py  params.py  services.py
pytuber/lastfm/commands/: __init__.py  cmd_add.py  cmd_fetch.py  cmd_setup.py  cmd_sync.py  cmd_tags.py
pytuber/youtube/: commands.py  services.py
scripts/: config.yml  demo-magic.sh  demo.sh
tests/: test_data.py  test_models.py  test_storage.py  test_utils.py  utils.py
tests/core/: test_params.py  test_services.py
tests/core/commands/: test_cmd_add.py  test_cmd_autocomplete.py  test_cmd_clean.py  test_cmd_fetch.py  test_cmd_list.py  test_cmd_push.py  test_cmd_quota.py  test_cmd_remove.py  test_cmd_setup.py  test_cmd_show.py
tests/fixtures/: client_secret.json
tests/lastfm/: test_commands.py  test_params.py  test_services.py
tests/lastfm/commands/: test_cmd_add.py  test_cmd_fetch.py  test_cmd_setup.py  test_cmd_sync.py  test_cmd_tags.py
tests/youtube/: test_commands.py  test_services.py
