
[metadata]
name = pytube.fm
description = Create youtube playsts
long_description = file: README.rst
url = https://github.com/tefra/pytube.fm
project_urls =
    Source=https://github.com/tefra/pytube.fm
    Documentation=https://pytube.fm.readthedocs.io/

author = Christodoulos Tsoulloftas
author_email = "chris@komposta.net",
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython


[flake8]
ignore = E203, E266, E501, W503, F821
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9

[isort]
known_third_party = attr,click,pydrag,setuptools,tabulate
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 79
