[metadata]
name = pytuber
version = 21.1
description = Manage youtube music playlists
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/tefra/pytuber
author = Christodoulos Tsoulloftas
author_email = "chris@komposta.net",
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
keywords = youtube,music,playlist,last.fm,cli
project_urls =
    Source=https://github.com/tefra/pytuber
    Documentation=https://pytuber.readthedocs.io/

[options]
packages = pytuber
install_requires =
    lxml>=4.3.3
    click>=5.0
    click_completion>=0.5.1
    pydrag>=18.1
    tabulate[widechars]>=0.8.3
    yaspin>=0.14.2
    google-api-python-client>=1.7.8
    google-auth>=1.6.3
    google-auth-oauthlib>=0.3.0
python_requires = >=3.6
include_package_data = True

[options.entry_points]
console_scripts =
    pytuber=pytuber:cli

[options.extras_require]
dev =
    pre-commit
    pytest
    pytest-cov
    codecov
    tox
    Pygments
    check-manifest
docs =
    sphinx
    sphinx-rtd-theme
    sphinxcontrib-programoutput


[flake8]
ignore = E203, E266, E501, W503, F821
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9

